--- a/viewer/index.html
+++ b/viewer/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Firefox SVG icons</title>
+  <title>Firefox Icons</title>
   <link href="css/app.css" rel="stylesheet"/>
 </head>
 <body>
-  <div id="headline">Firefox SVG Icons</div>
-  <input type="text" placeholder="Search icons" id="search-input"/>
+  <div id="headline">Firefox Icons</div>
+  <input type="text" placeholder="Search Icons" id="search-input"/>
   <div id="icon-list" hidden></div>
   <div id="loading">Loading icons...</div>
 
