--- a/viewer/index.html
+++ b/viewer/index.html
@@ -10,7 +10,7 @@
   <div id="icon-list" hidden></div>
   <div id="loading">Loading icons...</div>
   <div id="icon-details">
-    <h1>Download your icon.</h1>
+    <h1>Download your icon.<div class="close-button"></div></h1>
     <div class="preview"></div>
     <div class="name"></div>
     <div class="options">
@@ -26,7 +26,8 @@
         <div class="title">Select your color:</div>
         <select id="color">
           <option value="context-fill" selected>Context-fill</option>
-          <option value="other" disabled>Coming soon…</option>
+          <option value="black">Black</option>
+          <option value="white">White</option>
         </select>
       </div>
     </div>
