Working download button

--- a/html/viewer/index.html
+++ b/html/viewer/index.html
@@ -25,25 +25,25 @@
         <div class="section platform">
           <div class="title">Platform</div>
           <div class="checkbox">
-            <input type="checkbox" id="desktop-web" checked><label for="desktop-web"><span>Desktop/Web</span></label><br>
+            <input type="checkbox" value="svg" id="desktop-web" checked><label for="desktop-web"><span>Desktop/Web</span></label><br>
           </div>
           <div class="checkbox">
-            <input type="checkbox" id="ios" disabled><label for="ios"><span>iOS</span><small>Coming Soon</small></label><br>
-          </div class="checkbox">
+            <input type="checkbox" value="ios" id="ios" disabled><label for="ios"><span>iOS</span><small>Coming Soon</small></label><br>
+          </div>
           <div class="checkbox">
-            <input type="checkbox" id="Android" disabled><label for="android"><span>Android</span><small>Coming Soon</small></label>
+            <input type="checkbox" value="android" id="Android" disabled><label for="android"><span>Android</span><small>Coming Soon</small></label>
           </div>
         </div>
         <div class="section fill">
           <div class="title">Fill</div>
           <div class="radio">
-            <input type="radio" name="fill" id="context-fill" checked><label for="context-fill"><span>Context Fill</span></label>
+            <input type="radio" name="fill" value="context-fill" id="context-fill" checked><label for="context-fill"><span>Context Fill</span></label>
           </div>
           <div class="radio">
-            <input type="radio" name="fill" id="dark"><label for="dark"><span>Dark</span></label><br>
+            <input type="radio" name="fill" value="rgba(12, 12, 13, .8)" id="dark"><label for="dark"><span>Dark</span></label><br>
           </div>
           <div class="radio">
-            <input type="radio" name="fill" id="light"><label for="light"><span>Light</span></label><br>
+            <input type="radio" name="fill" value="rgba(249, 249, 250, .8)" id="light"><label for="light"><span>Light</span></label><br>
           </div>
         </div>
         <!-- Display this section only if iOS and/or Android checkboxes are selected -->
