--- a/html/viewer/index.html
+++ b/html/viewer/index.html
@@ -8,7 +8,7 @@
   <link href="css/input-toggle-switch.css" rel="stylesheet"/>
 </head>
 <body>
-  <div id="headline">Photon Icons</div>
+  <h1 id="headline">Photon Icons</h1>
   <input type="text" placeholder="Search Icons" id="search-input"/>
   <div id="icon-list" hidden></div>
   <div id="loading">Loading icons...</div>
@@ -62,13 +62,11 @@
       </div>
     </footer>
   </div>
-
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
     ga('create', 'UA-98252211-2', 'auto');
     ga('send', 'pageview');
   </script>
