[style] context fill option hints is about code

--- a/html/viewer/index.html
+++ b/html/viewer/index.html
@@ -35,9 +35,9 @@
           </div>
         </div>
         <div class="section fill">
-          <div class="title">Fill</div>
+          <div class="title">Icon Fill</div>
           <div class="radio">
-            <input type="radio" name="fill" value="context-fill" id="context-fill" checked><label for="context-fill"><span>Context Fill</span></label>
+            <input type="radio" name="fill" value="context-fill" id="context-fill" checked><label for="context-fill"><code><img src="images/context-fill.svg" alt="Context Fill"></code></label>
           </div>
           <div class="radio">
             <input type="radio" name="fill" value="rgba(12, 12, 13, .8)" id="dark"><label for="dark"><span>Dark</span></label><br>
